--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -6,7 +6,8 @@
     <ion-title>Cart</ion-title>
   </ion-navbar>
 </ion-header>
- <ion-content padding>
+
+<ion-content padding>
   <ion-list>
     <ion-item *ngFor="let item of items">
       <ion-thumbnail item-start>
@@ -14,15 +15,19 @@
       </ion-thumbnail>
       <h2>{{item.produto.nome}}</h2>
       <p>{{item.produto.preco | currency}}</p>
-      <ion-icon class="nolinebreak" name="remove-circle" color="primary" (click)="decreaseQuantity(item.produto)"></ion-icon>
+      <ion-icon class="nolinebreak" name="remove-circle" color="primary"  (click)="decreaseQuantity(item.produto)"></ion-icon>
       <p class="nolinebreak">{{item.quantidade}}</p>
       <ion-icon name="add-circle" color="primary" (click)="increaseQuantity(item.produto)"></ion-icon>
-      <ion-icon name="trash" item-end color="danger" (click)="removeItem(item.produto)"></ion-icon>
-    </ion-item>    
+      <ion-icon name="trash" item-end  color="danger" (click)="removeItem(item.produto)"></ion-icon>
+    </ion-item>
+    <ion-item *ngIf="total() > 0">
+      <h1>Total</h1>
+      <h1 item-end>{{total()}}</h1>
+    </ion-item>
     <ion-item *ngIf="total() <= 0">
       <h1>Seu carrinho está vazio</h1>
     </ion-item>
-  </ion-list>
+  </ion-list> 
   <button ion-button block (click)="goOn()">Continuar comprando</button>   
-  <button ion-button block color="secondary" (click)="checkout()">Finalizar pedido</button>   
-</ion-content>>
+  <button *ngIf="total() > 0" ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>   
+</ion-content>
