Componete loading na Categoria e Rfresher na Categoria e Produtos

--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -6,16 +6,23 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <ion-fab top right edge>
-    <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
-  </ion-fab>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)">
-      <ion-thumbnail item-start>
-        <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'">
-      </ion-thumbnail>
-      <h2>{{item.nome}}</h2>
-      <p>{{item.preco | currency}}</p>
-    </button>
-  </ion-list>
+
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+      <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
+    <ion-fab top right edge>
+      <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+    </ion-fab>
+
+    <ion-list>
+      <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)">
+        <ion-thumbnail item-start>
+          <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'">
+        </ion-thumbnail>
+        <h2>{{item.nome}}</h2>
+        <p>{{item.preco | currency}}</p>
+      </button>
+    </ion-list>
+    
 </ion-content>
