--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -25,4 +25,7 @@
       </button>
     </ion-list>
     
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
